# buildshare

./: .gitignore  README.md  db.sqlite3  implementation_plan.md  notes.md  package-lock.json  package.json
.husky/: pre-push
backend/: .gitignore  GEMINI.md  README.md  manage.py  package.json  pyproject.toml
backend/binaries/: admin.py  apis.py  apps.py  flows.py  models.py  selectors.py  serializers.py  services.py  tasks.py  urls.py
backend/binaries/constraints/: __init__.py
backend/binaries/migrations/: 0001_initial.py  0002_initial.py  0003_alter_release_version_code_alter_release_version_id.py  0004_alter_artifact_hash_and_more.py  0005_remove_application_unique_app_per_project_and_more.py  0006_releasemessage.py  0007_artifact_size.py  0008_releasetag_release_tags_and_more.py  0009_bugreport_bugmessage_delete_releasemessage.py  0010_remove_bugreport_title.py  0011_alter_bugmessage_id_alter_bugreport_id.py
backend/binaries/services/: __init__.py  android_process.py
backend/binaries/tests/: test_bug_reports.py  test_download.py  test_release_messages.py  test_tasks.py
backend/config/: asgi.py  celery.py  env.py  urls.py  wsgi.py
backend/config/api/: exception_handlers.py
backend/config/django/: base.py
backend/core/: admin.py  errors.py  exceptions.py  flows.py  models.py  tests_flow.py
backend/core/api/: constraint_registry.py  exception_utils.py  mapping.py
backend/core/constraints/: __init__.py
backend/core/migrations/: 0001_initial.py  0002_taskjob_idempotency_key_and_more.py
backend/core/services/: storage.py
backend/libs/: android.py
backend/notifications/: admin.py  apis.py  models.py  serializers.py  services.py  urls.py
backend/notifications/constraints/: __init__.py
backend/notifications/migrations/: 0001_initial.py  0002_notification_check_notification_type_valid.py  0003_remove_notification_check_notification_type_valid_and_more.py  0004_remove_notification_check_notification_type_valid_and_more.py
backend/notifications/tests/: test_apis.py  test_services.py
backend/projects/: admin.py  apis.py  apps.py  models.py  permissions.py  selectors.py  serializers.py  services.py  signals.py  urls.py
backend/projects/constraints/: __init__.py
backend/projects/migrations/: 0001_initial.py  0002_initial.py  0003_projectinvitation.py  0004_projectinvitation_check_project_invitation_status_valid_and_more.py  0005_alter_projectinvitation_id.py
backend/projects/tests/: test_apis.py  test_constraints.py  test_invitation_discovery.py  test_services.py
backend/scratch/: research_integrity_error.py
backend/users/: admin.py  apis.py  apps.py  models.py  serializers.py  services.py  signals.py  urls.py
backend/users/constraints/: __init__.py
backend/users/migrations/: 0001_initial.py  0002_alter_user_options.py  0003_userprofile.py
backend/users/tests/: test_registration.py
mobile/: .env.example  .gitignore  .prettierignore  GEMINI.md  README.md  eas.json  (+15 more)
(+193 files in other folders)
